<resources> <!-- beinhaltet  englische Ausgaben für den Nutzer -->

    <!-- View Namen -->
    <string name="activity_login_et_loginName">user ID</string>
    <string name="activity_login_et_password">password</string>
    <string name="activity_search_user_et_searchName">id</string>
    <string name="activity_search_user_btn_search">search</string>
    <string name="activity_show_user_btn_delete">delete tokens</string>
    <string name="activity_show_user_tv_name">Name:</string>
    <string name="activity_show_user_tv_tokens">#Tokens:</string>
    <string name="activity_login_btn_login">login</string>
    <string name="app_name">AdminApp</string>
    <string name="title_activity_settings">Settings</string>
    <string name="fragment_preferences_connection_title">Connection</string>
    <string name="fragment_preferences_hostname_title">IP-address</string>
    <string name="fragment_preferences_port_title">port</string>
    <string name="fragment_preferences_timeout_title">timeout</string>

    <!-- Nachrichten -->
    <string name="activity_settings_timeout_summary">"%s ms"</string>
    <string name="activity_show_user_add_token_hint">"Hold token to device to add it."</string>

    <!-- Error Nachrichten -->
    <string name="ERROR_CONNECT_FAILED">Couldn\'t connect to server.</string>
    <string name="ERROR_AUTHENTIFICATION_FAILED">username or password wrong</string>
    <string name="ERROR_NFC_DISABLED">please enable NFC to add a token</string>
    <string name="ERROR_NO_ENTRY_FOUND">no entry found</string>
    <string name="ERROR_HASH_FAILURE">token could not be hashed</string>
    <string name="ERROR_ADD_FAILED">couldn\'t add token</string>

    <!-- Preference Titel -->
    <string name="activity_login_item_settings">settings</string>

</resources>