<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ShowUserActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toTopOf="@+id/activity_show_user_btn_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:text="@string/activity_show_user_tv_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/activity_show_user_tv_tokens"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="5dp"
            android:text="@string/activity_show_user_tv_tokens"
            app:layout_constraintTop_toBottomOf="@+id/activity_show_user_et_name"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/activity_show_user_et_name"
            android:textAlignment="viewEnd"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/activity_show_user_et_tokens"
            android:textAlignment="viewEnd"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/activity_show_user_et_name"
            app:layout_constraintStart_toEndOf="@+id/activity_show_user_tv_tokens" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/activity_show_user_btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="248dp"
        android:text="@string/activity_show_user_btn_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/activity_show_user_add_token_hint"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_show_user_btn_delete" />

</androidx.constraintlayout.widget.ConstraintLayout>